# nano-ha

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  agent.py  deploy.sh  docker-compose.yml  pyproject.toml  setup.py
bridge/: __init__.py  config_flow.py  const.py  conversation.py  manifest.json
config/ha/: configuration.yaml
config/nanobot/: config.yaml  system_prompt.md  tools.json
docs/: architecture.md  onboarding-flow.md  roadmap.md
hosting/: server.py
integrations/google_cloud_stt/: __init__.py
plugins/example_plugin/: __init__.py
tests/: mock_ha_server.py  test_agent_live.py  test_conversation.py  test_deploy.py  test_e2e.py  test_external_services.py  test_google_cloud_stt.py  test_ha_automation.py  test_ha_control.py  test_ha_devices.py  test_ha_energy.py  test_ha_info.py  test_ha_memory.py  test_ha_monitor.py  test_ha_scenes.py  test_ha_setup.py  test_ha_users.py  test_hosting.py  test_plugin_loader.py  test_setup.py  test_tenant_manager.py
tools/: constants.py  external_services.py  ha_automation.py  ha_client.py  ha_control.py  ha_devices.py  ha_energy.py  ha_info.py  ha_memory.py  ha_monitor.py  ha_network.py  ha_scenes.py  ha_setup.py  ha_users.py  plugin_loader.py  tenant_manager.py
