[project]
name = "nanoha"
version = "0.1.0"
description = "NanoHA — Nano Home Agent. Agent-first smart home setup."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
ha = [
    "homeassistant",
    "home-assistant-frontend",
    "PyTurboJPEG",
]
nanobot = [
    "nanobot-ai>=0.1.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
